<resources>
    <string name="app_name">Keystone</string>
    <string name="action_scan_qr_code">Scan QR Code</string>
    <string name="drawer_menu_my_vault">My Keystone</string>
    <string name="drawer_menu_add_remove">Add / Hide Assets</string>
    <string name="drawer_menu_sync">Watch-only Wallet</string>
    <string name="drawer_menu_setting">Settings</string>
    <string name="drawer_menu_about">About Keystone</string>
    <string name="title_about">About Keystone</string>
    <string name="title_setting">Settings</string>
    <string name="title_sync">Sync Keystone Mobile</string>
    <string name="add_remove_coin">Add / Hide Assets</string>
    <string name="scan">Scan QR Code</string>
    <string name="scan_hint">Align QR Code within frame to scan</string>
    <string name="pattern_lock">Pattern Unlock</string>
    <string name="pattern_lock_hint">Please draw an unlock pattern</string>
    <string name="switch_to_password">Switch to password unlock</string>
    <string name="www_keystone_com" translatable="false">www.keyst.one</string>
    <string name="device_info">Serial Number: %s \n   Firmware Version：%s\n SE Firmware Version: %s\n System Version：%s </string>
    <string name="addr" translatable="false">addr.</string>
    <string name="asset_list_empty">Please go to Menu - Add / Hide Assets to add assets you need</string>
    <string name="mnemonic_hint1">"The recovery phrase is used to restore your wallet. Use a Keystone Tablet to record your 24 recovery phrase words and store them securely."</string>
    <string name="mnemonic_hint2">Do not share your recovery phrase with anyone or take a picture of it. If it is lost or stolen, all assets are irretrievable.</string>
    <string name="saved">Recovery Phrase Saved</string>
    <string name="tab_my_pubkey">My PubKey</string>
    <string name="tab_transaction_history">SIGNATURES</string>
    <string-array name="step_label">
        <item>Web Authentication</item>
        <item>Set Password</item>
        <item>Firmware Upgrade</item>
        <item>Create/Import Wallet</item>
        <item>Choose Companion App</item>
    </string-array>
    <string name="create_addr">Create %s Address</string>
    <string name="signing_hint">Signing…</string>
    <string name="scan_progress">Please continue scanning: %s</string>
    <string name="eos_hint">Here is your %s public key （safe to share）</string>
    <string name="eos_pubkey">Public Key：\n%s</string>
    <string name="receive_warning">This address is only for %s, other digital assets sent to the above address will be lost.</string>
    <string name="receive_coin">Receive %s</string>
    <string name="version_update_hint"><![CDATA[Please visit: <font color="#00cdc3">https://keyst.one/fw<font/> to check for firmware updates. If you are not using the latest firmware, download it from the official Keystone website and save it on a microSD card (FAT32 format). Transfer the file to your device as shown in the image below. (MicroSD card not included with purchase.)]]></string>
    <string name="version">Version </string>
    <string name="setting_language">Language</string>
    <string name="setting_vibrator">Vibrate On / Off</string>
    <string name="setting_brightness">Screen Brightness</string>
    <string name="setting_screen_off_time">Screen Timeout Length</string>
    <string-array name="language_entries" translatable="false">
        <item>English</item>
        <item>中文</item>
        <item>한국의</item>
        <item>Español</item>



    </string-array>
    <string-array name="language_values" translatable="false">
        <item>en</item>
        <item>zh_rCN</item>
        <item>ko_rKR</item>
        <item>es_rES</item>



    </string-array>
    <string-array name="screen_off_entries">
        <item>15 secs</item>
        <item>30 secs</item>
        <item>1 min</item>
        <item>2 mins</item>
        <item>5 mins</item>
        <item>10 mins</item>
    </string-array>
    <string-array name="screen_off_values" translatable="false">
        <item>15000</item>
        <item>30000</item>
        <item>60000</item>
        <item>120000</item>
        <item>300000</item>
        <item>600000</item>
    </string-array>
    <string name="tab_my_address">ADDRESSES</string>
    <string name="tab_my_account">Account</string>
    <string name="web_auth1"><![CDATA[1. Click on <font color="#00cdc3">"Scan QR Code"<font/> button below and scan the QR code displayed on the website]]></string>
    <string name="web_auth2">2. Your Keystone would then display a code. Please enter that into the official website to verify the authenticity of your device</string>
    <string name="web_auth3"><![CDATA[3. Click <font color="#00cdc3">"Verify"<font/> button on the website to see your result]]></string>
    <string name="web_auth4">If the authentication fails, please do not use this device as it may have been compromised!</string>
    <string name="web_auth5"><![CDATA[Web Auth Link: <br> <font color="#00cdc3">https://keyst.one/start/1<font/>]]></string>
    <string name="firmware_upgrade1">Upgrading your firmware to the latest version to benefit from new features is highly recommended.</string>
    <string name="firmware_upgrade2">A microSD card in FAT32 format with a maximum memory capacity of 512GB is required</string>
    <string name="firmware_upgrade3">A minimum of 70% battery charge is required</string>
    <string name="firmware_upgrade4"><![CDATA[To download the latest firmware, please visit: <br> <font color="#00cdc3">https://keyst.one/start/3<font/>]]></string>
    <string name="firmware_upgrade_start">Update Now</string>
    <string name="firmware_upgrade_unable">Error detected</string>
    <string name="firmware_upgrade_unable_description">The new Firmware package was not detected.Please check whether your microSD card has been formatted to FAT32, has no more than 512GB of memory, and if the \'update.zip\' file has been properly copied onto the card.</string>
    <string name="skip">Skip</string>
    <string name="read_confirm"><![CDATA[I\'ve read and agreed to the <font color="#00cdc3"><u>\"Terms of Service\"</u><font/>, and  <font color="#00cdc3"><u>\"Privacy Policy\"</u><font/> ]]></string>
    <string name="create_vault_hint"><![CDATA[1. Touch <font color="#00cdc3">\"Create Wallet\"<font/> to generate a new Wallet]]></string>
    <string name="import_vault_hint"><![CDATA[2. Touch <font color="#00cdc3">\"Import Wallet\"<font/> to import an existing HD wallet]]></string>
    <string name="license">Terms of Service</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="input_mnemonic_hint">Please enter your %d-word recovery phrase in the table below.</string>
    <string name="input_mnemonic">Enter Recovery Phrase</string>
    <string name="pwd_again_hint">Confirm password</string>
    <string name="pwd_hint">Please enter your password</string>
    <string name="password_verify_wrong">Passwords do not match.</string>
    <string name="passphrase_not_match">Passphrase do not match.</string>
    <string name="password_input_wrong">Must include upper and lower case letters and numbers.</string>
    <string name="mnemonic_hint"><![CDATA[Important Information: <br>1. The recovery phrase is the only way retrieve your assets. Please use record your recovery phrase carefully and store in a safe location.  <br><br>2. Do not take photos of your recovery phrase or store on a device connected to the Internet. Do not share the recovery phrase with others.  <br><br>3. Visit <font color="#00cdc3">https://keyst.one/kt<font/> to purchase a Keystone Tablet to store your recovery phrase with a higher degree of security.]]></string>
    <string name="generate_mnemonic">Generate Recovery Phrase</string>
    <string name="next">Next</string>
    <string name="and">And</string>
    <string name="import_vault">Import Wallet</string>
    <string name="create_vault">Create Wallet</string>
    <string name="confirm_mnemonic">Confirm Recovery Phrase</string>
    <string name="confirm_input_mnemonic_hint">Please enter your %d-word recovery phrase in the table below.</string>
    <string name="complete">Done</string>
    <string name="password_verify_too_short">Too short</string>
    <string name="sync_hint2"><![CDATA[Download Keystone Mobile:<br><font color="#00cdc3">https://keyst.one/app<font/><br>]]></string>
    <string name="sync_hint1"><![CDATA[Scan <font color="#00cdc3">QR Code<font/> with Keystone Mobile]]></string>
    <string name="set_pattern">Set Pattern Lock</string>
    <string name="system_settings">System Settings</string>
    <string name="white_list">White List</string>
    <string name="create_import_vault">Create/Import Wallet</string>
    <string name="safety_instruction">Security Manual</string>
    <string name="factory_reset">Wipe Device</string>
    <string name="about_message">Keystone is an air-gapped hardware wallet that uses completely transparent QR code data transmissions so you can verify what goes in and out of it. Our Secure Element performs true random number generation (TRNG) to ensure your private keys come from real, physical sources of entropy. All transaction signing occurs entirely within the Secure Element, which has state of the art defenses to protect you in the event that an attacker has physical access to your device. </string>
    <string name="change_password">Change Password</string>
    <string name="welcome">Welcome to Keystone!</string>
    <string name="welcome_site"><![CDATA[Please open the following link using a PC: <font color="#00cdc3">https://keyst.one/start</font>]]></string>
    <string name="welcome_text">This will help guide setting up your Keystone hardware wallet.</string>
    <string name="welcome_done">It\'s ready, start</string>
    <string name="fingerprint_settings">Fingerprint Settings</string>
    <string name="use_fingerprint_unlock">Unlock Device</string>
    <string name="use_fingerprint_sign">Sign Transactions</string>
    <string name="set_passphrase">Passphrase Wallet</string>
    <string name="export_to_electrum_guide">1. Open Electrum and create a new wallet. \n2. Choose "Standard wallet". \n3. Choose "Use a master key". \n4. Touch "Show Master Public Key" below then click the camera icon in the "Create keystore from a master key" window in Electrum to scan the QR code that displays on Keystone.
 \n5. Set a password. \n6. Enter the watch-only wallet.</string>
    <string name="export_xpub">Show Master Public Key</string>
    <string name="export_to_electrum_guide_hint">How to create a watch-only wallet in Electrum:</string>
    <string name="electrum_compatibility">Electrum Watch-Only Wallet</string>
    <string name="contact_info">Twitter: @KeystoneWallet\nEmail：support@keyst.one</string>
    <string name="keep_mnemonic_hint">*Keystone will never ask for your Recovery Phrase under any circumstances, please be sure to keep your Recovery Phrase and don’t disclose them to anyone</string>
    <string name="contact_us">Contact US</string>
    <string name="current_device_info">Equipment Info</string>
    <string name="switch_passphrase">Enter Passphrase Wallet</string>
    <string name="check_mnemonic">Recovery Phrase Check</string>
    <string name="create_mnemonic_guide_content"><![CDATA[
        1. Touch "Fill in your 23 words" button below<br>
        2. Select the first 23 from the official list of 2048 words and fill in<br>
        3. Keystone will calculate the 24th word<br>
        4. Back up your Recovery Phrase<br>
    ]]>
    </string>
    <string name="create_mnemonic_web_guide">The official list of 2048 words and more details, please visit: https://keyst.one/24th</string>
    <string name="fill_23_words">Fill in your 23 words</string>
    <string name="create_23_word">Create your own 24 words Recovery Phrase</string>
    <string name="create_23_word_title">Create your Recovery Phrase</string>
    <string name="format_sdcard_title">Format Card</string>
</resources>