<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2021 Keystone
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ in the file COPYING.  If not, see <http://www.gnu.org/licenses/>.
  -->

<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <com.keystone.cold.ui.preference.SwitchPreference
        android:key="fingerprint_unlock"
        android:persistent="true"
        android:defaultValue="true"
        android:title="@string/use_fingerprint_unlock" />

    <com.keystone.cold.ui.preference.SwitchPreference
        android:key="fingerprint_passphrase"
        android:persistent="true"
        android:defaultValue="true"
        android:title="@string/switch_passphrase" />

    <com.keystone.cold.ui.preference.SwitchPreference
        android:key="fingerprint_sign"
        android:persistent="true"
        android:defaultValue="true"
        android:title="@string/use_fingerprint_sign" />

</androidx.preference.PreferenceScreen>